--- a/WebShopREST/WebContent/styles/logInStyle.css
+++ b/WebShopREST/WebContent/styles/logInStyle.css
@@ -3,9 +3,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #D4EAD6; /* Pastel green color */
   padding: 20px;
+  position: relative; /* Add position relative to the container */
 }
 
 .title {
@@ -61,4 +62,13 @@
 
 .form-row button:hover {
   background-color: #8FC590; /* Darker shade of pastel green on hover */
+}
+
+.car-objects-button {
+  position: absolute; /* Add position absolute to the button */
+  top: 20px; /* Position the button at the top */
+  left: 20px; /* Position the button at the left */
+  background-color: #8FC590;
+  padding: 8px 16px; /* Adjust the padding to make the button thinner */
+  border-radius: 3px;
 }
